Added account activation and password reset features

--- a/Bookshare/src/main/resources/LanguageRes_pl.properties
+++ b/Bookshare/src/main/resources/LanguageRes_pl.properties
@@ -1,2 +1,4 @@
 activation_mail_subject= Aktywuj konto w serwisie BookCross
 activation_mail_text=Kliknij w poniższy link aby aktywować konto w serwisie BookCross. \n %s \n Jeżeli nie zakładałeś konta w Serwisie BookCross, zignoruj tę wiadomość.
+password_reset_mail_subject=Zresetuj swoje hasło w serwisie BookCross
+password_reset_mail_text=Kliknij w poniższy link aby zrestartować swoje hasło w serwisie BookCross \n %s \n Jeśli nie prosiłeś o reset hasła, zignoruj tę wiadomość.
