Authentication now uses custom manager, deleted custom provider, last login and login attempt are now being written to database. Login attempts counter works. Account is now being disabled after 3 login attempts, and mail is sent with token to unlock. Unlock endpoint has been added

--- a/Bookshare/src/main/resources/LanguageRes_en.properties
+++ b/Bookshare/src/main/resources/LanguageRes_en.properties
@@ -1,4 +1,6 @@
 activation_mail_subject=Activate your BookCross account
 activation_mail_text=Use link below to activate your BookCross account: \n %s \n If you have not created account on BookCross, ignore this message.
 password_reset_mail_subject=Reset your BookCross account password
-password_reset_mail_text=Use link below to reset your BookCross password \n %s \n If you have not requested password reset, ignore this message.
+password_reset_mail_text=Use link below to reset your BookCross password: \n %s \n If you have not requested password reset, ignore this message.
+account_enable_mail_subject=Unlock your BookCross account
+account_enable_mail_text=Your BookCross account has been blocked.Use the link below in order to unlock it: \n %s
