Started working on password reset

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -2,11 +2,13 @@
   "Site.name": "BookCross",
   "Form.email": "Email address",
   "Form.login": "Login",
+  "Form.loginOrMail": "Login or email address",
   "Form.password": "Password",
   "Form.passwordConfirm": "Confirm password",
   "Form.loginButton": "Log in",
   "Form.registerButton": "Create account",
   "Login.forgotPasswordButton": "Forgot Password",
+  "Form.SendPasswordResetButton": "Send reset link",
   "Navbar.login": "Log In",
   "Navbar.register": "Register",
   "Navbar.accounts": "Accounts List",
