Create page to enter new password after receiving reset password link

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -7,8 +7,10 @@
   "Form.passwordConfirm": "Confirm password",
   "Form.loginButton": "Log in",
   "Form.registerButton": "Create account",
-  "Login.forgotPasswordButton": "Forgot Password",
+  "Form.forgotPasswordButton": "Forgot Password",
   "Form.SendPasswordResetButton": "Send reset link",
+  "Form.ChangePasswordButton": "Change Password",
+  "Form.EmptyFieldError": "Field cannot be empty",
   "Navbar.login": "Log In",
   "Navbar.register": "Register",
   "Navbar.accounts": "Accounts List",
