--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -7,7 +7,9 @@
   "Form.passwordConfirm": "Potwierdź hasło",
   "Form.loginButton": "Zaloguj",
   "Form.registerButton": "Stwórz konto",
-  "Login.forgotPasswordButton": "Zapomniałem hasła",
+  "Form.forgotPasswordButton": "Zapomniałem hasła",
+  "Form.ChangePasswordButton": "Zmień hasło",
+  "Form.EmptyFieldError": "Pole nie może być puste",
   "Navbar.login": "Zaloguj",
   "Navbar.register": "Zarejestruj",
   "Navbar.accounts": "Lista kont",
