Updated routes and localization

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -1,16 +1,39 @@
 {
+  "Form.Yes": "Yes",
+  "Form.No": "No",
+  "Error.Readiness": "Connection to server has been lost.",
+  "Error.Title": "Error",
+  "Button.Close": "Close",
   "Site.name": "BookCross",
+  "Account.PasswordChangeAccordion": "Change password",
+  "Account.ChangeAccessLevels": "Access levels",
   "Form.email": "Email address",
   "Form.login": "Login",
   "Form.loginOrMail": "Login or email address",
+  "Form.language": "Language",
+  "Form.oldPassword": "Old Password",
   "Form.password": "Password",
+  "Form.Book": "Book",
+  "Form.Bookshelf": "Bookshelf",
   "Form.passwordConfirm": "Confirm password",
   "Form.loginButton": "Log in",
   "Form.registerButton": "Create account",
   "Form.forgotPasswordButton": "Forgot Password",
   "Form.SendPasswordResetButton": "Send reset link",
   "Form.ChangePasswordButton": "Change Password",
+  "Form.FindBookButton": "Find Book",
+  "Form.FindBookshelfButton": "Find Bookshelf",
   "Form.EmptyFieldError": "Field cannot be empty",
+  "Form.PasswordsDontMatchError": "Passwords don't match",
+  "Form.PasswordTooShortError": "Password is to short",
+  "Form.FormatError": "Field format invalid",
+  "Form.userActivated": "Activated",
+  "Form.userDisabled": "Disabled",
+  "Form.lastSuccessfulLoginAttempt": "Last successfull login",
+  "Form.creationDate": "Creation date",
+  "Home.BookMapTab": "Find Book",
+  "Home.BookshelfMapTab": "Find Bookshelf",
+  "Home.NearbyTab": "Nearby",
   "Navbar.login": "Log In",
   "Navbar.register": "Register",
   "Navbar.accounts": "Accounts List",
@@ -19,6 +42,8 @@
   "Navbar.logs": "Logs",
   "Navbar.bookshelves": "Bookshelves",
   "Navbar.books": "Books",
+  "Navbar.AccountEdit": "Edit Account",
+  "UserInfo.Header": "Information",
   "ROLE_USER": "User",
   "ROLE_ADMIN": "Admin",
   "ROLE_MODERATOR": "Moderator",
@@ -27,5 +52,6 @@
   "incorrect_password": "Incorrect password",
   "user_disabled": "User has been disabled for safety reasons. Please check your email for more info.",
   "mail_exist": "Mail address already in use",
-  "login_exist": " Login already in use"
+  "login_exist": " Login already in use",
+  "password_in_use": "Password already in use"
 }
