--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -1,15 +1,39 @@
 {
+  "Form.Yes": "Tak",
+  "Form.No": "Nie",
   "Site.name": "BookCross",
+  "Error.Readiness": "Utracono połączenie z serwerem.",
+  "Error.Title": "Błąd",
+  "Button.Close": "Zamknij",
+  "Account.PasswordChangeAccordion": "Zmień hasło",
+  "Account.ChangeAccessLevels": "Poziomy dostpu",
   "Form.email": "Adres email",
   "Form.login": "Login",
   "Form.loginOrMail": "Login lub adres email",
+  "Form.language": "Język",
+  "Form.oldPassword": "Stare hasło",
   "Form.password": "Hasło",
+  "Form.Book": "Książka",
+  "Form.Bookshelf": "Półka",
   "Form.passwordConfirm": "Potwierdź hasło",
   "Form.loginButton": "Zaloguj",
   "Form.registerButton": "Stwórz konto",
   "Form.forgotPasswordButton": "Zapomniałem hasła",
+  "Form.SendPasswordResetButton": "Wyślij link do zmiany hasła",
   "Form.ChangePasswordButton": "Zmień hasło",
+  "Form.FindBookButton": "Znajdź książkę",
+  "Form.FindBookshelfButton": "Znajdź półkę",
   "Form.EmptyFieldError": "Pole nie może być puste",
+  "Form.FormatError": "Pole nie spełnia wymagań",
+  "Form.PasswordTooShortError": "Hasło jest za krótkie",
+  "Form.PasswordsDontMatchError": "Hasła nie są takie same",
+  "Form.userActivated": "Aktywowany",
+  "Form.userDisabled": "Zablokowany",
+  "Form.lastSuccessfulLoginAttempt": "Ostatnie udane logowanie",
+  "Form.creationDate": "Data utworzenia",
+  "Home.BookMapTab": "Znajdź książkę",
+  "Home.BookshelfMapTab": "Znajdź półkę",
+  "Home.NearbyTab": "Okolica",
   "Navbar.login": "Zaloguj",
   "Navbar.register": "Zarejestruj",
   "Navbar.accounts": "Lista kont",
@@ -18,6 +42,8 @@
   "Navbar.logs": "Logi",
   "Navbar.bookshelves": "Półki",
   "Navbar.books": "Książki",
+  "Navbar.AccountEdit": "Edytuj ustawienia konta",
+  "UserInfo.Header": "Informacje",
   "ROLE_USER": "Użytkownik",
   "ROLE_ADMIN": "Administrator",
   "ROLE_MODERATOR": "Moderator",
@@ -26,5 +52,6 @@
   "incorrect_password": "Niepoprawne hasło",
   "user_disabled": "Konto zostało zablokowane. Na adres email przypisany do konta została wysłana wiadomość ze szczegółowymi informacjami .",
   "mail_exist": "Adres email jest już używany",
-  "login_exist": " Login jest już używany"
+  "login_exist": " Login jest już używany",
+  "password_in_use": "Hasło już w użyciu"
 }
