Created Component for displaying users list, added its corresponding request and added it to the Routes

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -7,6 +7,11 @@
   "Site.name": "BookCross",
   "Account.PasswordChangeAccordion": "Change password",
   "Account.ChangeAccessLevels": "Access levels",
+  "Accounts.FilterButton": "Filter",
+  "Filter.Title":"Filter",
+  "Filter.ActiveFilters": "Active filters",
+  "Form.Filter": "Filter",
+  "Form.ClearFilter": "Clear filter",
   "Form.email": "Email address",
   "Form.login": "Login",
   "Form.loginOrMail": "Login or email address",
