--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -7,6 +7,11 @@
   "Button.Close": "Zamknij",
   "Account.PasswordChangeAccordion": "Zmień hasło",
   "Account.ChangeAccessLevels": "Poziomy dostpu",
+  "Accounts.FilterButton": "Filtruj",
+  "Filter.Title":"Filtr",
+  "Filter.ActiveFilters": "Aktywne filtry",
+  "Form.Filter": "Filtruj",
+  "Form.ClearFilter": "Wyczyść filtr",
   "Form.email": "Adres email",
   "Form.login": "Login",
   "Form.loginOrMail": "Login lub adres email",
