--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -8,6 +8,8 @@
   "Account.PasswordChangeAccordion": "Change password",
   "Account.ChangeAccessLevels": "Access levels",
   "Accounts.FilterButton": "Filter",
+  "Account.Disable": "Disable Account",
+  "Account.Enable": "Enable Account",
   "Filter.Title":"Filter",
   "Filter.ActiveFilters": "Active filters",
   "Form.Filter": "Filter",
@@ -21,6 +23,7 @@
   "Form.Book": "Book",
   "Form.Bookshelf": "Bookshelf",
   "Form.passwordConfirm": "Confirm password",
+  "Form.sortBy": "Sort by",
   "Form.loginButton": "Log in",
   "Form.registerButton": "Create account",
   "Form.forgotPasswordButton": "Forgot Password",
@@ -56,7 +59,10 @@
   "user_not_found": "User not found",
   "incorrect_password": "Incorrect password",
   "user_disabled": "User has been disabled for safety reasons. Please check your email for more info.",
+  "user_not_disabled": "User is not disabled",
+  "user_already_disabled": "User is already disabled",
   "mail_exist": "Mail address already in use",
   "login_exist": " Login already in use",
-  "password_in_use": "Password already in use"
+  "password_in_use": "Password already in use",
+  "action_not_allowed": "Action not allowed"
 }
