Created Component to display logs for admin

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -38,10 +38,18 @@
   "Form.userActivated": "Activated",
   "Form.userDisabled": "Disabled",
   "Form.lastSuccessfulLoginAttempt": "Last successfull login",
+  "Form.date": "Date",
+  "Form.level": "Log Level",
+  "Form.message": "Message",
+  "Form.newestDate": "Date - From newest",
+  "Form.oldestDate": "Date - From oldest",
+  "Form.logger": "Logger",
+  "Form.exception": "Exception",
   "Form.creationDate": "Creation date",
   "Home.BookMapTab": "Find Book",
   "Home.BookshelfMapTab": "Find Bookshelf",
   "Home.NearbyTab": "Nearby",
+  "Logs.FilterButton": "Filtruj",
   "Navbar.login": "Log In",
   "Navbar.register": "Register",
   "Navbar.accounts": "Accounts List",
