--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -38,10 +38,18 @@
   "Form.userActivated": "Aktywowany",
   "Form.userDisabled": "Zablokowany",
   "Form.lastSuccessfulLoginAttempt": "Ostatnie udane logowanie",
+  "Form.date": "Data",
+  "Form.level": "Poziom logu",
+  "Form.message": "Wiadomość",
+  "Form.newestDate": "Data - Od najnowszej",
+  "Form.oldestDate": "Data - Od najstarszej",
+  "Form.logger": "Logger",
+  "Form.exception": "Wyjątek",
   "Form.creationDate": "Data utworzenia",
   "Home.BookMapTab": "Znajdź książkę",
   "Home.BookshelfMapTab": "Znajdź półkę",
   "Home.NearbyTab": "Okolica",
+  "Logs.FilterButton": "Filtruj",
   "Navbar.login": "Zaloguj",
   "Navbar.register": "Zarejestruj",
   "Navbar.accounts": "Lista kont",
