Created bookshelves list display component

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -10,6 +10,7 @@
   "Accounts.FilterButton": "Filter",
   "Account.Disable": "Disable Account",
   "Account.Enable": "Enable Account",
+  "Bookshelf.noLocation": "No location data available",
   "Filter.Title":"Filter",
   "Filter.ActiveFilters": "Active filters",
   "Form.Filter": "Filter",
@@ -46,10 +47,21 @@
   "Form.logger": "Logger",
   "Form.exception": "Exception",
   "Form.creationDate": "Creation date",
+  "Form.LocationButton": "From Location",
+  "Form.FromMapButton": "From Map",
+  "Form.bookCount": "Book count",
+  "Form.bookCountUp": "Book count - from most",
+  "Form.bookCountDown": "Book count - From least",
+  "Form.userLocation": "User location",
+  "Form.distance": "Distance",
+  "Form.distanceUp": "Distance - from nearest",
+  "Form.distanceDown": "Distance - from furthest",
+  "Form.FilterButton": "Filter",
   "Home.BookMapTab": "Find Book",
   "Home.BookshelfMapTab": "Find Bookshelf",
   "Home.NearbyTab": "Nearby",
   "Logs.FilterButton": "Filtruj",
+  "Log.Title": "Log",
   "Navbar.login": "Log In",
   "Navbar.register": "Register",
   "Navbar.accounts": "Accounts List",
