--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -10,6 +10,7 @@
   "Accounts.FilterButton": "Filtruj",
   "Account.Disable": "Zablokuj konto",
   "Account.Enable": "Odblokuj konto",
+  "Bookshelf.noLocation": "Brak dostępnych danych lokalizacji",
   "Filter.Title":"Filtr",
   "Filter.ActiveFilters": "Aktywne filtry",
   "Form.Filter": "Filtruj",
@@ -46,10 +47,21 @@
   "Form.logger": "Logger",
   "Form.exception": "Wyjątek",
   "Form.creationDate": "Data utworzenia",
+  "Form.LocationButton": "Z lokalizacji",
+  "Form.FromMapButton": "Z mapy",
+  "Form.bookCount": "Ilość książek",
+  "Form.bookCountUp": "Ilość książek - malejąco",
+  "Form.bookCountDown": "Ilość książek - rosnąco",
+  "Form.userLocation": "Lokalizacja użytkownika",
+  "Form.distance": "Odległość",
+  "Form.distanceUp": "Odległość - od najbliższej",
+  "Form.distanceDown": "Odległość - od najdalszej",
+  "Form.FilterButton": "Filtruj",
   "Home.BookMapTab": "Znajdź książkę",
   "Home.BookshelfMapTab": "Znajdź półkę",
   "Home.NearbyTab": "Okolica",
   "Logs.FilterButton": "Filtruj",
+  "Log.Title": "Wpis",
   "Navbar.login": "Zaloguj",
   "Navbar.register": "Zarejestruj",
   "Navbar.accounts": "Lista kont",
