--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -10,7 +10,7 @@
   "Accounts.FilterButton": "Filter",
   "Account.Disable": "Disable Account",
   "Account.Enable": "Enable Account",
-  "Bookshelf.noLocation": "No location data available",
+  "Bookshelf.noLocation": "No location data loaded",
   "Filter.Title":"Filter",
   "Filter.ActiveFilters": "Active filters",
   "Form.Filter": "Filter",
@@ -54,14 +54,15 @@
   "Form.bookCountDown": "Book count - From least",
   "Form.userLocation": "User location",
   "Form.distance": "Distance",
-  "Form.distanceUp": "Distance - from nearest",
-  "Form.distanceDown": "Distance - from furthest",
+  "Form.distanceUp": "Distance - from furthest",
+  "Form.distanceDown": "Distance - from nearest",
   "Form.FilterButton": "Filter",
   "Home.BookMapTab": "Find Book",
   "Home.BookshelfMapTab": "Find Bookshelf",
   "Home.NearbyTab": "Nearby",
   "Logs.FilterButton": "Filtruj",
   "Log.Title": "Log",
+  "Modal.PickLocation": "Pick Location",
   "Navbar.login": "Log In",
   "Navbar.register": "Register",
   "Navbar.accounts": "Accounts List",
