--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -10,7 +10,7 @@
   "Accounts.FilterButton": "Filtruj",
   "Account.Disable": "Zablokuj konto",
   "Account.Enable": "Odblokuj konto",
-  "Bookshelf.noLocation": "Brak dostępnych danych lokalizacji",
+  "Bookshelf.noLocation": "Brak wczytanych danych lokalizacji",
   "Filter.Title":"Filtr",
   "Filter.ActiveFilters": "Aktywne filtry",
   "Form.Filter": "Filtruj",
@@ -54,14 +54,15 @@
   "Form.bookCountDown": "Ilość książek - rosnąco",
   "Form.userLocation": "Lokalizacja użytkownika",
   "Form.distance": "Odległość",
-  "Form.distanceUp": "Odległość - od najbliższej",
-  "Form.distanceDown": "Odległość - od najdalszej",
+  "Form.distanceUp": "Odległość - od najdalszej",
+  "Form.distanceDown": "Odległość - od najbliższej",
   "Form.FilterButton": "Filtruj",
   "Home.BookMapTab": "Znajdź książkę",
   "Home.BookshelfMapTab": "Znajdź półkę",
   "Home.NearbyTab": "Okolica",
   "Logs.FilterButton": "Filtruj",
   "Log.Title": "Wpis",
+  "Modal.PickLocation": "Wybierz lokalizację",
   "Navbar.login": "Zaloguj",
   "Navbar.register": "Zarejestruj",
   "Navbar.accounts": "Lista kont",
