Message is now being send when loging on admin account, fixed token issues, moved some properties to application.properties, added service method for retrieving users with eagerly fetched roles

--- a/Bookshare/src/main/resources/LanguageRes_en.properties
+++ b/Bookshare/src/main/resources/LanguageRes_en.properties
@@ -4,3 +4,5 @@ password_reset_mail_subject=Reset your BookCross account password
 password_reset_mail_text=Use link below to reset your BookCross password: \n %s \n If you have not requested password reset, ignore this message.
 account_enable_mail_subject=Unlock your BookCross account
 account_enable_mail_text=Your BookCross account has been blocked.Use the link below in order to unlock it: \n %s
+admin_account_login_mail_subject=Login Attempt
+admin_account_login_mail_text=There was a login attempt at your account from IP address: \n %s
