--- a/Bookshare/src/main/resources/LanguageRes_pl.properties
+++ b/Bookshare/src/main/resources/LanguageRes_pl.properties
@@ -4,3 +4,5 @@ password_reset_mail_subject=Zresetuj swoje hasło w serwisie BookCross
 password_reset_mail_text=Kliknij w poniższy link aby zrestartować swoje hasło w serwisie BookCross \n %s \n Jeśli nie prosiłeś o reset hasła, zignoruj tę wiadomość.
 account_enable_mail_subject=Odblokuj konto w serwisie BookCross
 account_enable_mail_text=Twoje konto w serwisie BookCross zostało zablokowane. Aby je odblokować, kliknij w poniższy link \n %s
+admin_account_login_mail_subject=Próba logowania
+admin_account_login_mail_text=Nastąpiła próba zalogowania na twoje konto z adresu IP: \n %s
