Added giigke geocoding, started working on bookshelf details display

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -48,15 +48,20 @@
   "Form.exception": "Exception",
   "Form.creationDate": "Creation date",
   "Form.LocationButton": "From Location",
+  "Form.location": "Location",
   "Form.FromMapButton": "From Map",
   "Form.bookCount": "Book count",
   "Form.bookCountUp": "Book count - from most",
   "Form.bookCountDown": "Book count - From least",
   "Form.userLocation": "User location",
   "Form.distance": "Distance",
-  "Form.distanceUp": "Distance - from furthest",
+  "Form.distanceUp": "Distance - from farthest",
   "Form.distanceDown": "Distance - from nearest",
   "Form.FilterButton": "Filter",
+  "Form.lastSuccessfulLoginIp": "Last successful login IP",
+  "Form.lastUnsuccessfulLoginAttempt": "Last unsuccessful login",
+  "Form.lastUnsuccessfulLoginIp": "Last unsuccessful login IP",
+  "Form.modificationDate": "Last modification date",
   "Home.BookMapTab": "Find Book",
   "Home.BookshelfMapTab": "Find Bookshelf",
   "Home.NearbyTab": "Nearby",
