--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -48,6 +48,7 @@
   "Form.exception": "Wyjątek",
   "Form.creationDate": "Data utworzenia",
   "Form.LocationButton": "Z lokalizacji",
+  "Form.location": "Lokalizacja",
   "Form.FromMapButton": "Z mapy",
   "Form.bookCount": "Ilość książek",
   "Form.bookCountUp": "Ilość książek - malejąco",
@@ -57,6 +58,10 @@
   "Form.distanceUp": "Odległość - od najdalszej",
   "Form.distanceDown": "Odległość - od najbliższej",
   "Form.FilterButton": "Filtruj",
+  "Form.lastSuccessfulLoginIp": "IP ostatniego udanego logowania",
+  "Form.lastUnsuccessfulLoginAttempt": "Ostatnie nieudane logowanie",
+  "Form.lastUnsuccessfulLoginIp": "IP ostatniego nieudanego logowania",
+  "Form.modificationDate": "Data ostatniej modyfikacji",
   "Home.BookMapTab": "Znajdź książkę",
   "Home.BookshelfMapTab": "Znajdź półkę",
   "Home.NearbyTab": "Okolica",
