Fixed mail messages links, added some missing translations

--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -84,9 +84,11 @@
   "ROLE_GUEST": "Gość",
   "user_not_found": "Nie znaleziono użytkownika",
   "incorrect_password": "Niepoprawne hasło",
-  "user_disabled": "Konto zostało zablokowane. Na adres email przypisany do konta została wysłana wiadomość ze szczegółowymi informacjami .",
+  "user_disabled": "Konto użytkownika zostało zablokowane.",
+  "user_not_active": "Konto użytkownika nie zostało aktywowane",
   "user_not_disabled": "Użytkownik nie jest zablokowany",
   "user_already_disabled": "Użytkownik jest już zablokowany",
+  "request_sent_message": "Jeżeli w serwisie istnieje konto, została na nie wysłana wiadomość",
   "mail_exist": "Adres email jest już używany",
   "login_exist": " Login jest już używany",
   "password_in_use": "Hasło już w użyciu",
