--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -84,9 +84,11 @@
   "ROLE_GUEST": "Guest",
   "user_not_found": "User not found",
   "incorrect_password": "Incorrect password",
-  "user_disabled": "User has been disabled for safety reasons. Please check your email for more info.",
+  "user_disabled": "User has been disabled.",
   "user_not_disabled": "User is not disabled",
+  "user_not_active": "User is not activated",
   "user_already_disabled": "User is already disabled",
+  "request_sent_message": "If account with given user/email exists, link has been send to corresponding email",
   "mail_exist": "Mail address already in use",
   "login_exist": " Login already in use",
   "password_in_use": "Password already in use",
