Created component for adding new genres

--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -5,13 +5,21 @@
   "Error.Readiness": "Utracono połączenie z serwerem.",
   "Error.Title": "Błąd",
   "Button.Close": "Zamknij",
+  "Book.author": "Autor",
+  "Book.title": "Tytuł",
+  "Book.coverType": "Rodzaj okładki",
+  "Book.language": "Język",
+  "Bookshelf.Move": "Przenieś",
+  "Bookshelf.Remove": "Usuń",
+  "Bookshelf.AddBookCopy": "Dodaj ksiażkę",
+  "Bookshelf.BookList": "Lista książek",
   "Account.PasswordChangeAccordion": "Zmień hasło",
   "Account.ChangeAccessLevels": "Poziomy dostpu",
   "Accounts.FilterButton": "Filtruj",
   "Account.Disable": "Zablokuj konto",
   "Account.Enable": "Odblokuj konto",
   "Bookshelf.noLocation": "Brak wczytanych danych lokalizacji",
-  "Filter.Title":"Filtr",
+  "Filter.Title": "Filtr",
   "Filter.ActiveFilters": "Aktywne filtry",
   "Form.Filter": "Filtruj",
   "Form.ClearFilter": "Wyczyść filtr",
@@ -51,8 +59,9 @@
   "Form.location": "Lokalizacja",
   "Form.FromMapButton": "Z mapy",
   "Form.bookCount": "Ilość książek",
-  "Form.bookCountUp": "Ilość książek - malejąco",
-  "Form.bookCountDown": "Ilość książek - rosnąco",
+  "Form.bookCountDown": "Ilość książek - malejąco",
+  "Form.bookCountUp": "Ilość książek - rosnąco",
+  "Form.CannotCreateGenreWIthoutTranslationError": "Nie można utworzyć gatunku bez conajmiej jednego tłumaczenia",
   "Form.userLocation": "Lokalizacja użytkownika",
   "Form.distance": "Odległość",
   "Form.distanceUp": "Odległość - od najdalszej",
@@ -62,6 +71,12 @@
   "Form.lastUnsuccessfulLoginAttempt": "Ostatnie nieudane logowanie",
   "Form.lastUnsuccessfulLoginIp": "IP ostatniego nieudanego logowania",
   "Form.modificationDate": "Data ostatniej modyfikacji",
+  "Form.CreateGenreButton": "Create genre",
+  "Form.KeyTooShortError": "Kade pole Język musi mieć długość dwóch znaków",
+  "Form.KeysNotUnique": "Każdy język musi mieć unikalną wartość",
+  "Genre.code": "Kod gatunku",
+  "Genre.key": "Język",
+  "Genre.value": "Tłumaczenie",
   "Home.BookMapTab": "Znajdź książkę",
   "Home.BookshelfMapTab": "Znajdź półkę",
   "Home.NearbyTab": "Okolica",
@@ -75,9 +90,19 @@
   "Navbar.logout": "Wyloguj",
   "Navbar.logs": "Logi",
   "Navbar.bookshelves": "Półki",
+  "Navbar.bookshelves.add": "Dodaj półkę",
+  "Navbar.bookshelves.list": "Lista półek",
   "Navbar.books": "Książki",
+  "Navbar.books.add": "Dodaj ksiażkę",
+  "Navbar.books.list": "Lista książek",
+  "Navbar.genres": "Gatunki",
+  "Navbar.genres.add": "Dodaj gatunek",
+  "Navbar.genres.list": "Lista gatunków",
   "Navbar.AccountEdit": "Edytuj ustawienia konta",
   "UserInfo.Header": "Informacje",
+  "CUSTOM": "Niestandardowa",
+  "HARD": "Twarda",
+  "SOFT": "Miękka",
   "ROLE_USER": "Użytkownik",
   "ROLE_ADMIN": "Administrator",
   "ROLE_MODERATOR": "Moderator",
@@ -89,9 +114,12 @@
   "user_not_disabled": "Użytkownik nie jest zablokowany",
   "user_already_disabled": "Użytkownik jest już zablokowany",
   "request_sent_message": "Jeżeli w serwisie istnieje konto, została na nie wysłana wiadomość",
+  "cant_delete_bookshelf_with_books": "Nie możesz usunąć półki na której znajdują się ksiażki. Usuń książki lub przenieś je na inną półkę",
   "mail_exist": "Adres email jest już używany",
   "login_exist": " Login jest już używany",
   "password_in_use": "Hasło już w użyciu",
   "action_not_allowed": "Akcja niedozwolona",
-  "at_least_one_role": "Użytkownik musi posiadać przynajmniej jedną rolę"
+  "at_least_one_role": "Użytkownik musi posiadać przynajmniej jedną rolę",
+  "genre_exist": "Gatunek z tą nazwą już istnieje",
+  "cant_create_empty_genre": "Nie można utworzyć gatunku bez conajmiej jednego tłumaczenia"
 }
