--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -4,14 +4,22 @@
   "Error.Readiness": "Connection to server has been lost.",
   "Error.Title": "Error",
   "Button.Close": "Close",
+  "Book.author": "Author",
+  "Book.title": "Title",
+  "Book.coverType": "Cover type",
+  "Book.language": "Language",
+  "Bookshelf.Move": "Move",
+  "Bookshelf.Remove": "Remove",
+  "Bookshelf.AddBookCopy": "Add Book",
   "Site.name": "BookCross",
+  "Bookshelf.BookList": "Books list",
   "Account.PasswordChangeAccordion": "Change password",
   "Account.ChangeAccessLevels": "Access levels",
   "Accounts.FilterButton": "Filter",
   "Account.Disable": "Disable Account",
   "Account.Enable": "Enable Account",
   "Bookshelf.noLocation": "No location data loaded",
-  "Filter.Title":"Filter",
+  "Filter.Title": "Filter",
   "Filter.ActiveFilters": "Active filters",
   "Form.Filter": "Filter",
   "Form.ClearFilter": "Clear filter",
@@ -51,8 +59,9 @@
   "Form.location": "Location",
   "Form.FromMapButton": "From Map",
   "Form.bookCount": "Book count",
-  "Form.bookCountUp": "Book count - from most",
-  "Form.bookCountDown": "Book count - From least",
+  "Form.bookCountDown": "Book count - from most",
+  "Form.bookCountUp": "Book count - From least",
+  "Form.CannotCreateGenreWIthoutTranslationError": "You can not create genre without at least one translation",
   "Form.userLocation": "User location",
   "Form.distance": "Distance",
   "Form.distanceUp": "Distance - from farthest",
@@ -62,6 +71,12 @@
   "Form.lastUnsuccessfulLoginAttempt": "Last unsuccessful login",
   "Form.lastUnsuccessfulLoginIp": "Last unsuccessful login IP",
   "Form.modificationDate": "Last modification date",
+  "Form.CreateGenreButton": "Create genre",
+  "Form.KeyTooShortError": "Language name has to be exactly 2 letters long",
+  "Form.KeysNotUnique": "Each language name has to be unique",
+  "Genre.code": "Genre Name",
+  "Genre.key": "Language",
+  "Genre.value": "Translation",
   "Home.BookMapTab": "Find Book",
   "Home.BookshelfMapTab": "Find Bookshelf",
   "Home.NearbyTab": "Nearby",
@@ -75,9 +90,19 @@
   "Navbar.logout": "Log out",
   "Navbar.logs": "Logs",
   "Navbar.bookshelves": "Bookshelves",
+  "Navbar.bookshelves.add": "Add bookshelf",
+  "Navbar.bookshelves.list": "Bookshelves list",
   "Navbar.books": "Books",
+  "Navbar.books.add": "Add book",
+  "Navbar.books.list": "Books list",
+  "Navbar.genres": "Genres",
+  "Navbar.genres.add": "Add genre",
+  "Navbar.genres.list": "Genres list",
   "Navbar.AccountEdit": "Edit Account",
   "UserInfo.Header": "Information",
+  "CUSTOM": "Custom",
+  "HARD": "Hard",
+  "SOFT": "Soft",
   "ROLE_USER": "User",
   "ROLE_ADMIN": "Admin",
   "ROLE_MODERATOR": "Moderator",
@@ -89,9 +114,12 @@
   "user_not_active": "User is not activated",
   "user_already_disabled": "User is already disabled",
   "request_sent_message": "If account with given user/email exists, link has been send to corresponding email",
+  "cant_delete_bookshelf_with_books": "You can not remove bookshelf with books inside. Move or remove the books first",
   "mail_exist": "Mail address already in use",
   "login_exist": " Login already in use",
   "password_in_use": "Password already in use",
   "action_not_allowed": "Action not allowed",
-  "at_least_one_role": "User must have at least one role"
+  "at_least_one_role": "User must have at least one role",
+  "genre_exist": "Genre with this name already exists",
+  "cant_create_empty_genre": "You can not create genre without at least one translation"
 }
