Added new translations

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -72,15 +72,24 @@
   "Form.lastUnsuccessfulLoginIp": "Last unsuccessful login IP",
   "Form.modificationDate": "Last modification date",
   "Form.CreateGenreButton": "Create genre",
+  "Form.CreateBookshelfButton": "Create bookshelf",
   "Form.KeyTooShortError": "Language name has to be exactly 2 letters long",
   "Form.KeysNotUnique": "Each language name has to be unique",
+  "Form.BookshelfCreatedMessage": "Bookshelf created successfully",
+  "Form.Success": "Success",
+  "Form.OK": "OK",
+  "Form.genreCodeUp": "Genre Name - alphabetically - a -> z",
+  "Form.genreCodeDown": "Genre Name - alphabetically - z -> a",
+  "Form.genreKeysUp": "Languages count - from least",
+  "Form.genreKeysDown": "Languages count - from most",
   "Genre.code": "Genre Name",
   "Genre.key": "Language",
+  "Genre.keys": "Languages",
   "Genre.value": "Translation",
   "Home.BookMapTab": "Find Book",
   "Home.BookshelfMapTab": "Find Bookshelf",
   "Home.NearbyTab": "Nearby",
-  "Logs.FilterButton": "Filtruj",
+  "Logs.FilterButton": "Filter",
   "Log.Title": "Log",
   "Modal.PickLocation": "Pick Location",
   "Navbar.login": "Log In",
