--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -71,11 +71,20 @@
   "Form.lastUnsuccessfulLoginAttempt": "Ostatnie nieudane logowanie",
   "Form.lastUnsuccessfulLoginIp": "IP ostatniego nieudanego logowania",
   "Form.modificationDate": "Data ostatniej modyfikacji",
-  "Form.CreateGenreButton": "Create genre",
+  "Form.CreateGenreButton": "Stwórz gatunek",
+  "Form.CreateBookshelfButton": "Stwórz półkę",
   "Form.KeyTooShortError": "Kade pole Język musi mieć długość dwóch znaków",
   "Form.KeysNotUnique": "Każdy język musi mieć unikalną wartość",
-  "Genre.code": "Kod gatunku",
+  "Form.BookshelfCreatedMessage": "Półka utworzona pomyślnie",
+  "Form.Success": "Sukces",
+  "Form.OK": "OK",
+  "Form.genreCodeUp": "Nazwa gatunku - alfabetycznie - a -> z",
+  "Form.genreCodeDown": "Nazwa gatunku - alfabetycznie - z -> a",
+  "Form.genreKeysUp": "Ilość języków - rosnąco",
+  "Form.genreKeysDown": "Ilość języków - malejąco",
+  "Genre.code": "Nazwa gatunku",
   "Genre.key": "Język",
+  "Genre.keys": "Języki",
   "Genre.value": "Tłumaczenie",
   "Home.BookMapTab": "Znajdź książkę",
   "Home.BookshelfMapTab": "Znajdź półkę",
