Created Book creation component

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -8,6 +8,7 @@
   "Book.title": "Title",
   "Book.coverType": "Cover type",
   "Book.language": "Language",
+  "Book.genres": "Genres",
   "Bookshelf.Move": "Move",
   "Bookshelf.Remove": "Remove",
   "Bookshelf.AddBookCopy": "Add Book",
@@ -73,9 +74,11 @@
   "Form.modificationDate": "Last modification date",
   "Form.CreateGenreButton": "Create genre",
   "Form.CreateBookshelfButton": "Create bookshelf",
+  "Form.CreateBookButton": "Create book",
   "Form.KeyTooShortError": "Language name has to be exactly 2 letters long",
   "Form.KeysNotUnique": "Each language name has to be unique",
   "Form.BookshelfCreatedMessage": "Bookshelf created successfully",
+  "Form.BookCreatedMessage": "Book created successfully",
   "Form.Success": "Success",
   "Form.OK": "OK",
   "Form.genreCodeUp": "Genre Name - alphabetically - a -> z",
