--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -9,6 +9,7 @@
   "Book.title": "Tytuł",
   "Book.coverType": "Rodzaj okładki",
   "Book.language": "Język",
+  "Book.genres": "Gatunki",
   "Bookshelf.Move": "Przenieś",
   "Bookshelf.Remove": "Usuń",
   "Bookshelf.AddBookCopy": "Dodaj ksiażkę",
@@ -72,10 +73,12 @@
   "Form.lastUnsuccessfulLoginIp": "IP ostatniego nieudanego logowania",
   "Form.modificationDate": "Data ostatniej modyfikacji",
   "Form.CreateGenreButton": "Stwórz gatunek",
+  "Form.CreateBookButton": "Stwórz książkę",
   "Form.CreateBookshelfButton": "Stwórz półkę",
   "Form.KeyTooShortError": "Kade pole Język musi mieć długość dwóch znaków",
   "Form.KeysNotUnique": "Każdy język musi mieć unikalną wartość",
   "Form.BookshelfCreatedMessage": "Półka utworzona pomyślnie",
+  "Form.BookCreatedMessage": "Książka utworzona pomyślnie",
   "Form.Success": "Sukces",
   "Form.OK": "OK",
   "Form.genreCodeUp": "Nazwa gatunku - alfabetycznie - a -> z",
