Created BookList component

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -8,6 +8,10 @@
   "Book.title": "Title",
   "Book.coverType": "Cover type",
   "Book.language": "Language",
+  "Book.releaseDate": "Year of release",
+  "Book.releasedBefore": "Released before",
+  "Book.releasedAfter": "Released after",
+  "Book.copyCount": "Copies count",
   "Book.genres": "Genres",
   "Bookshelf.Move": "Move",
   "Bookshelf.Remove": "Remove",
@@ -85,6 +89,16 @@
   "Form.genreCodeDown": "Genre Name - alphabetically - z -> a",
   "Form.genreKeysUp": "Languages count - from least",
   "Form.genreKeysDown": "Languages count - from most",
+  "Form.titleUp": "Title - alphabetically - a -> z",
+  "Form.titleDown": "Title - alphabetically - z -> a",
+  "Form.authorSurnameUp": "Author surname - alphabetically - a -> z",
+  "Form.authorSurnameDown": "Author surname - alphabetically - z -> a",
+  "Form.authorNameUp": "Author name - alphabetically - a -> z",
+  "Form.authorNameDown": "Author name - alphabetically - z -> a",
+  "Form.releaseYearUp": "Year of release - from oldest",
+  "Form.releaseYearDown": "Year of release - from newest",
+  "Form.copyCountUp": "Amount of book copies - from least",
+  "Form.copyCountDown": "Amount of book copies - from most",
   "Genre.code": "Genre Name",
   "Genre.key": "Language",
   "Genre.keys": "Languages",
