--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -8,6 +8,10 @@
   "Book.author": "Autor",
   "Book.title": "Tytuł",
   "Book.coverType": "Rodzaj okładki",
+  "Book.releaseDate": "Rok wydania",
+  "Book.releasedBefore": "Wydana przed",
+  "Book.releasedAfter": "Wydana po",
+  "Book.copyCount": "Liczba egzemplarzy",
   "Book.language": "Język",
   "Book.genres": "Gatunki",
   "Bookshelf.Move": "Przenieś",
@@ -85,6 +89,16 @@
   "Form.genreCodeDown": "Nazwa gatunku - alfabetycznie - z -> a",
   "Form.genreKeysUp": "Ilość języków - rosnąco",
   "Form.genreKeysDown": "Ilość języków - malejąco",
+  "Form.titleUp": "Tytuł - alfabetycznie - a -> z",
+  "Form.titleDown": "Tytuł - alfabetycznie - z -> a",
+  "Form.authorSurnameUp": "Nazwisko autora - alfabetycznie - a -> z",
+  "Form.authorSurnameDown": "Nazwisko autora - alfabetycznie - z -> a",
+  "Form.authorNameUp": "Imię autora - alfabetycznie - a -> z",
+  "Form.authorNameDown": "Imię autora - alfabetycznie - z -> a",
+  "Form.releaseYearUp": "Rok wydania - od najstarszego",
+  "Form.releaseYearDown": "Rok wydania - od najnowszego",
+  "Form.copyCountUp": "Ilość egzemplarzy- rosnąco",
+  "Form.copyCountDown": "Ilość egzemplarzy - malejąco",
   "Genre.code": "Nazwa gatunku",
   "Genre.key": "Język",
   "Genre.keys": "Języki",
