Added Genre display component, reworked some redirects in genre components and added message on account creation

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -99,16 +99,29 @@
   "Form.releaseYearDown": "Year of release - from newest",
   "Form.copyCountUp": "Amount of book copies - from least",
   "Form.copyCountDown": "Amount of book copies - from most",
+  "Form.usageCountUp": "Usage count - from least",
+  "Form.usageCountDown": "Usage count - from most",
+  "Form.GenreDeletedMessage": "Genre has been deleted",
+  "Form.GenreCreatedMessage": "Genre has been created",
+  "Form.AccountCreatedMessage": "Account has been created. You will receive email with activation link soon",
+  "Form.PasswordsNotMatchError": "Passwords do not match",
   "Genre.code": "Genre Name",
   "Genre.key": "Language",
   "Genre.keys": "Languages",
   "Genre.value": "Translation",
+  "Genre.name": "Translations",
+  "Genre.Remove": "Remove",
+  "Genre.Modify": "Modify",
+  "Genre.usageCount": "Usage count",
   "Home.BookMapTab": "Find Book",
   "Home.BookshelfMapTab": "Find Bookshelf",
   "Home.NearbyTab": "Nearby",
   "Logs.FilterButton": "Filter",
   "Log.Title": "Log",
   "Modal.PickLocation": "Pick Location",
+  "Modal.DeleteConfirm": "Confirm delete operation",
+  "Modal.DeleteBookshelfText": "Are you sure you want to delete this bookshelf?",
+  "Modal.DeleteGenreText": "Are you sure you want to delete this genre?",
   "Navbar.login": "Log In",
   "Navbar.register": "Register",
   "Navbar.accounts": "Accounts List",
@@ -147,5 +160,7 @@
   "action_not_allowed": "Action not allowed",
   "at_least_one_role": "User must have at least one role",
   "genre_exist": "Genre with this name already exists",
-  "cant_create_empty_genre": "You can not create genre without at least one translation"
+  "genre_not_exist": "Genre doesnt exist",
+  "cant_create_empty_genre": "You can not create genre without at least one translation",
+  "wrong_argument_exception": "Wrong argument passed"
 }
