--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -99,16 +99,29 @@
   "Form.releaseYearDown": "Rok wydania - od najnowszego",
   "Form.copyCountUp": "Ilość egzemplarzy- rosnąco",
   "Form.copyCountDown": "Ilość egzemplarzy - malejąco",
+  "Form.usageCountUp": "Ilość użyć - rosnąco",
+  "Form.usageCountDown": "Ilość użyć - malejąco",
+  "Form.GenreDeletedMessage": "Gatunek został usunięty",
+  "Form.GenreCreatedMessage": "Gatunek został dodany",
+  "Form.AccountCreatedMessage": "Konto zostało utworzone. Niedługo otrzymasz wiadomość z linkiem aktywacyjnym",
+  "Form.PasswordsNotMatchError": "Hasła nie są takie same",
   "Genre.code": "Nazwa gatunku",
   "Genre.key": "Język",
   "Genre.keys": "Języki",
   "Genre.value": "Tłumaczenie",
+  "Genre.name": "Tłumaczenia",
+  "Genre.Remove": "Usuń",
+  "Genre.Modify": "Modyfikuj",
+  "Genre.usageCount": "Ilość użyć",
   "Home.BookMapTab": "Znajdź książkę",
   "Home.BookshelfMapTab": "Znajdź półkę",
   "Home.NearbyTab": "Okolica",
   "Logs.FilterButton": "Filtruj",
   "Log.Title": "Wpis",
   "Modal.PickLocation": "Wybierz lokalizację",
+  "Modal.DeleteConfirm": "Potwierdź usunięcie",
+  "Modal.DeleteBookshelfText": "Czy na pewno chcesz usunąć tę półkę?",
+  "Modal.DeleteGenreText": "Czy na pewno chcesz usunąć ten gatunek?",
   "Navbar.login": "Zaloguj",
   "Navbar.register": "Zarejestruj",
   "Navbar.accounts": "Lista kont",
@@ -147,5 +160,7 @@
   "action_not_allowed": "Akcja niedozwolona",
   "at_least_one_role": "Użytkownik musi posiadać przynajmniej jedną rolę",
   "genre_exist": "Gatunek z tą nazwą już istnieje",
-  "cant_create_empty_genre": "Nie można utworzyć gatunku bez conajmiej jednego tłumaczenia"
+  "genre_not_exist": "Gatunek nie istnieje",
+  "cant_create_empty_genre": "Nie można utworzyć gatunku bez conajmiej jednego tłumaczenia",
+  "wrong_argument_exception": "Podano nieprawidłowy argument"
 }
